# MPSOscilloscope

./: .gitignore  LICENSE.txt  MPSOscilloscope.pyproject  README.md  __main__.py  controller.py  displayscreen.py  displayscreen.ui  main.py  mainwindow.py  mainwindow.ui  model.py  runtest.bat  setup.cfg  utils.py  view.py
controller/: controller.py  pluginManager.py
model/: __init__.py  defaults.py  model.py  oscilloscope.py  trigger.py  utils.py  worker.py
plugin/basicAnalysis/: __init__.py  view.py
plugin/basicAnalysis/ui/: basicAnalysis.py  basicAnalysis.ui
plugin/builtin/basicAnalysis/: __init__.py  panel.py  plugin.py  processor.py
plugin/builtin/basicAnalysis/ui/: basicAnalysis.py  basicAnalysis.ui
plugin/builtin/fastFourierTranformation/: __init__.py  panel.py  plugin.py  processor.py
plugin/builtin/linearInterpolation/: processor.py
plugin/helpers/: metadata.py  pluginType.py
src/: __init__.py  __main__.py  utils.py
src/controller/: controller.py  pluginManager.py  utils.py
src/model/: __init__.py  defaults.py  worker.py
src/plugin/helpers/: metadata.py  pluginType.py
src/ui/: mainwindow.py  mainwindow.ui
src/view/: display.py
src/view/internalControllers/: configPanelControl.py  displayZoomControl.py  pluginPanelControl.py  rightSliderControl.py
ui/: basicAnalysis.py  basicAnalysis.ui  displayscreen.py  mainwindow.py  mainwindow.ui
view/: __init__.py  display.py  displayZoomControl.py  utils.py  view.py
view/internalControllers/: configPanelControl.py  displayZoomControl.py  rightSliderControl.py
(+14 files in other folders)
