[metadata]
name = MPSOscilloscope
version = 0.0.1
author = Ofey Chan
author_email = ofey206@gmail.com
description = An Oscilloscope built upon MPS060602 and PyQt5.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ofey404/MPSOscilloscope
project_urls =
    Bug Tracker = https://github.com/ofey404/MPSOscilloscope/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    mps060602
    pyqt5
    matplotlib
    numpy

[options.packages.find]
where = src